diesel_compile_tests/tests/fail/having_cant_be_used_without_group_by.stderr
error[E0277]: the trait bound `SelectStatement<FromClause<table>, SelectClause<name>>: HavingDsl<_>` is not satisfied
   --> tests/fail/having_cant_be_used_without_group_by.rs:29:10
    |
 LL |         .having(users::id.gt(1))
    |          ^^^^^^ the trait `HavingDsl<_>` is not implemented for `SelectStatement<FromClause<table>, SelectClause<name>>`
    |
    = note: a `HAVING` clause requires setting a `GROUP BY` clause first
help: the trait `HavingDsl<_>` is not implemented for `SelectStatement<_, _, _, _, _, _, diesel::query_builder::group_by_clause::NoGroupByClause, diesel::query_builder::having_clause::NoHavingClause, _>`
      but it is implemented for `SelectStatement<_, _, _, _, _, _, diesel::query_builder::group_by_clause::GroupByClause<_>, _, _>`
   --> DIESEL/diesel/diesel/src/query_builder/select_statement/dsl_impls.rs
    |
LL | / impl<F, S, D, W, O, LOf, G, H, Predicate> HavingDsl<Predicate>
LL | |     for SelectStatement<FromClause<F>, S, D, W, O, LOf, GroupByClause<G>, H>
LL | | where
LL | |     F: QuerySource,
LL | |     Predicate: AppearsOnTable<F>,
LL | |     Predicate: Expression,
LL | |     Predicate::SqlType: BoolOrNullableBool,
    | |___________________________________________^
    = help: for that trait implementation, expected `diesel::query_builder::group_by_clause::GroupByClause<_>`, found `diesel::query_builder::group_by_clause::NoGroupByClause`
 
    
error[E0282]: type annotations needed
  --> tests/fail/having_cant_be_used_without_group_by.rs:26:5
   |
LL | /     users::table
LL | |
LL | |         .select(users::name)
LL | |         .having(users::id.gt(1))
   | |________________________________^ cannot infer type

error[E0277]: the trait bound `(): diesel::Expression` is not satisfied
  --> tests/fail/having_cant_be_used_without_group_by.rs:35:10
   |
LL |         .having(users::id.gt(1))
   |          ^^^^^^ the trait `diesel::Expression` is not implemented for `()`
   |
   = help: the following other types implement trait `diesel::Expression`:
             &T
             AliasedField<S, C>
             Box<T>
             CaseWhen<CaseWhenConditionsIntermediateNode<W, T, Whens>, E>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, ElseExpression<E>>
             CaseWhen<CaseWhenConditionsLeaf<W, T>, NoElseExpression>
             Collate<T, C>
             Exists<T>
           and N others
   = note: required for `BoxedSelectStatement<'_, (Integer, Text), FromClause<table>, _>` to implement `HavingDsl<_>`

   
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/having_cant_be_used_without_group_by.rs:42:10
   |
LL |         .having(posts::id.eq(42))
   |          ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::id` to implement `AppearsOnTable<users::table>`
  --> tests/fail/having_cant_be_used_without_group_by.rs:14:9
   |
LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, Bound<Integer, i32>>>` to implement `AppearsOnTable<users::table>`
   = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ..., ..., ...>` to implement `HavingDsl<Grouped<Eq<id, Bound<Integer, i32>>>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/having_cant_be_used_without_group_by.rs:50:10
   |
LL |         .having(posts::id.eq(42))
   |          ^^^^^^ expected `Once`, found `Never`
   |
note: required for `posts::columns::id` to implement `AppearsOnTable<users::table>`
  --> tests/fail/having_cant_be_used_without_group_by.rs:14:9
   |
LL |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `Grouped<Eq<id, Bound<Integer, i32>>>` to implement `AppearsOnTable<users::table>`
   = note: required for `BoxedSelectStatement<'_, Text, FromClause<table>, _, id>` to implement `HavingDsl<Grouped<Eq<id, Bound<Integer, i32>>>>`

      = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
